add new routes to swagger schema
